force-app/main/default/objects/AARPCFS_Course_Version_by_State__c/AARPCFS_Course_Version_by_State__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>AARPCFS_Course_Version_by_State</label>
</CustomObject>