force-app/main/default/objects/AARPCFS_Course_Version_by_State__c/fields/Course_Version_4R__c.field-meta.xml
<CustomField>
    <fullName>Course_Version_4R__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Course Version 4R</label>
    <type>Checkbox</type>
</CustomField>