force-app/main/default/objects/AARPCFS_Course_Version_by_State__c/fields/State_Name__c.field-meta.xml
<CustomField>
    <fullName>State_Name__c</fullName>
    <externalId>true</externalId>
    <label>State Name</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>